# pico_timer_error

./: CMakeLists.txt  README.md  main.c  second_core.c  second_core.h
